--- a/wwwroot/css/base.css
+++ b/wwwroot/css/base.css
@@ -1,33 +1,43 @@
 .add-todo {
-    font-size: 36px;
-    position: fixed;
-    left: 30px;
-    bottom: 30px;
-    height: 68px;
-    width: 68px;
+  font-size: 36px;
+  position: fixed;
+  left: 30px;
+  bottom: 30px;
+  height: 68px;
+  width: 68px;
 }
 
 .circle {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
 .padding-0 {
-    padding-right: 0;
-    padding-left: 0;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .padding-right-0 {
-    padding-right: 0;
+  padding-right: 0;
 }
 
 .padding-left-0 {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 .margin-right-0 {
-    margin-right: 0;
+  margin-right: 0;
 }
 
-.daycontaner{
-    border: solid 1px black;
+.daycontaner {
+  border: solid 1px black;
+  min-height: 4rem;
+}
+
+.temp {
+  display: none;
+}
+
+.row-cols-7 > * {
+  flex: 0 0 auto;
+  width: 14.28571428571429%;
 }
