--- a/wwwroot/css/base.css
+++ b/wwwroot/css/base.css
@@ -67,3 +67,12 @@ body {
   height: auto;
   align-items: center;
 }
+
+.overflow-y {
+  overflow-y: auto;
+  min-height: 0;
+}
+
+.min-height-0 {
+  min-height: 0;
+}
