--- a/wwwroot/css/base.css
+++ b/wwwroot/css/base.css
@@ -1,6 +1,5 @@
 html,
-body,
-.fullheght {
+body {
   height: 100%;
 }
 body {
@@ -19,6 +18,9 @@ body {
 
 .circle {
   border-radius: 50%;
+}
+.z-top {
+  z-index: 999;
 }
 
 .padding-0 {
@@ -75,4 +77,34 @@ body {
 
 .min-height-0 {
   min-height: 0;
+}
+
+/* color */
+.navy-blue {
+  background-color: #03045e !important;
+}
+
+.flower-blue {
+  background-color: #023e8a !important;
+}
+.star-command-blue {
+  background-color: #0077b6 !important;
+}
+.blue-green {
+  background-color: #0096c7 !important;
+}
+.cerulean-crayola {
+  background-color: #00b4d8 !important;
+}
+.sky-blue-crayola {
+  background-color: #48cae4 !important;
+}
+.sky-blue-crayola2 {
+  background-color: #90e0ef !important;
+}
+.blizzard-blue {
+  background-color: #ade8f4 !important;
+}
+.powder-blue {
+  background-color: #caf0f8 !important;
 }
