--- a/wwwroot/css/base.css
+++ b/wwwroot/css/base.css
@@ -39,7 +39,9 @@ body {
 }
 
 .daycontaner {
-  font-size: 0.8rem;
+  font-size: 1rem;
+  color: black;
+  background-color: whitesmoke;
   border: solid 1px black;
   min-height: 4rem;
   overflow: hidden;
