--- a/css/base.css
+++ b/css/base.css
@@ -41,6 +41,15 @@ body {
   margin-right: 0;
 }
 
+.min-high-0 {
+  min-height: 0;
+}
+.flex-colum-100{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .daycontaner {
   font-size: 0.8rem;
   color: black;
